"Fix Align Content to Center in SASS"

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -38,14 +38,13 @@ body {
     background-color: $very-light-gray;
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     font-size: 15px;
 }
 
 /* MAIN */
 main {
     width: 375px;
-    margin: auto;
 
     /* PRODUCT SECTION */
     .product-section {
